Blender UI problems with certain theme files #50976

Closed
opened 2017-03-17 10:25:54 +01:00 by Dalai Felinto · 9 comments

In 2.8 if you use certain theme options (e.g., userpref.blend) the panel headers is really wrong:
beforefix-brecht-theme.png

Expected results:
expected.png

The white text is probably only needing to replace some glColor calls with BLF_color (e.g., see 19b3b11c64). The icon not showing, and the other changes may be more involving.

For a related triangle commit, see: 6906a884ee and rb6906a884ee

In 2.8 if you use certain theme options (e.g., [userpref.blend](https://archive.blender.org/developer/F511765/userpref.blend)) the panel headers is really wrong: ![beforefix-brecht-theme.png](https://archive.blender.org/developer/F511767/beforefix-brecht-theme.png) Expected results: ![expected.png](https://archive.blender.org/developer/F511769/expected.png) The white text is probably only needing to replace some glColor calls with BLF_color (e.g., see 19b3b11c64). The icon not showing, and the other changes may be more involving. For a related triangle commit, see: 6906a884ee and rb6906a884ee
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Author
Owner

@mano-wii in case you are having trouble finding which files to tackle, those bugs are extremely important.

@mano-wii in case you are having trouble finding which files to tackle, those bugs are extremely important.

Just adding some information:
The problem is that the theme setting for TITLE (RGB) is being considered RGBA and setting the alpha to 0 instead of 255;

Just adding some information: The problem is that the theme setting for TITLE (RGB) is being considered RGBA and setting the alpha to 0 instead of 255;

The real question is how to get a theme like that. If the property alpha of the title needs to be changed, I suggest change the array_length to 4:

@@ -1088,11 +1088,11 @@ static void rna_def_userdef_theme_ui(BlenderRNA *brna)
 static void rna_def_userdef_theme_space_common(StructRNA *srna)
 {
 	PropertyRNA *prop;
 
 	prop = RNA_def_property(srna, "title", PROP_FLOAT, PROP_COLOR_GAMMA);
-	RNA_def_property_array(prop, 3);
+	RNA_def_property_array(prop, 4);
 	RNA_def_property_ui_text(prop, "Title", "");
 	RNA_def_property_update(prop, 0, "rna_userdef_update");
 
 	prop = RNA_def_property(srna, "text", PROP_FLOAT, PROP_COLOR_GAMMA);
 	RNA_def_property_array(prop, 3);

The real question is how to get a theme like that. If the property alpha of the title needs to be changed, I suggest change the array_length to 4: ``` @@ -1088,11 +1088,11 @@ static void rna_def_userdef_theme_ui(BlenderRNA *brna) static void rna_def_userdef_theme_space_common(StructRNA *srna) { PropertyRNA *prop; prop = RNA_def_property(srna, "title", PROP_FLOAT, PROP_COLOR_GAMMA); - RNA_def_property_array(prop, 3); + RNA_def_property_array(prop, 4); RNA_def_property_ui_text(prop, "Title", ""); RNA_def_property_update(prop, 0, "rna_userdef_update"); prop = RNA_def_property(srna, "text", PROP_FLOAT, PROP_COLOR_GAMMA); RNA_def_property_array(prop, 3); ```
Bastien Montagne was assigned by Dalai Felinto 2017-04-03 14:12:09 +02:00

The reason for the breakage is that, before 2.8, the functions that searched for the ThemeColor of TH_TITLE were 3ubv:

void UI_ThemeColor(int colorid)
{
	const unsigned char *cp;
	
	cp = UI_ThemeGetColorPtr(theme_active, theme_spacetype, colorid);
	glColor3ubv(cp);

}

Now in 2.8 the functions that are looking for the ThemeColor of TH_TITLE are 4ubv:

UI_GetThemeColor4ubv(TH_TITLE, col_title);
The reason for the breakage is that, before 2.8, the functions that searched for the ThemeColor of TH_TITLE were 3ubv: ``` void UI_ThemeColor(int colorid) { const unsigned char *cp; cp = UI_ThemeGetColorPtr(theme_active, theme_spacetype, colorid); glColor3ubv(cp); } ``` Now in 2.8 the functions that are looking for the ThemeColor of TH_TITLE are 4ubv: ``` UI_GetThemeColor4ubv(TH_TITLE, col_title); ```

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed in 1f6037c887

Fixed in 1f6037c887
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50976
No description provided.